# hatsu

./: .clippy.toml  .dockerignore  .env.example  .envrc  .gitattributes  .gitignore  .gitmodules  .rustfmt.toml  404.html  CNAME  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.nightly  Dockerfile.release  FEDERATION.md  Justfile  README.md  chapter_1.html  cspell.config.yaml  devbox.json  devenv.nix  docker-compose.yaml  flake.nix  index.html  intro.html  print.html  rust-toolchain.toml  rustfmt.toml  searchindex.js  searchindex.json  toc.html  toc.js
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.github/: CODEOWNERS
admins/: block-instances-or-actors.html  create-account.html  environments.html  install-binary.html  install-docker.html  install-nix.html  install-with-docker.html  install.html
contrib/: hatsu.service  hatsu.sysusers
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/api/src/routes/: generate_204.rs  mod.rs
crates/api_apub/: Cargo.toml
crates/api_apub/src/: lib.rs
crates/api_apub/src/activities/: activity.rs  mod.rs
crates/api_apub/src/posts/: mod.rs  notice.rs  post.rs
crates/api_apub/src/users/: mod.rs  user.rs  user_followers.rs  user_following.rs  user_inbox.rs  user_outbox.rs
crates/api_mastodon/: Cargo.toml  README.md
crates/api_mastodon/src/: lib.rs
crates/api_mastodon/src/entities/: account.rs  context.rs  custom_emoji.rs  instance.rs  mod.rs  status.rs
crates/api_mastodon/src/routes/: mod.rs
crates/api_mastodon/src/routes/instance/: instance.rs  mod.rs  v1.rs  v2.rs
crates/api_mastodon/src/routes/statuses/: mod.rs  status_context.rs  status_favourited_by.rs  status_reblogged_by.rs
crates/apub/: Cargo.toml  README.md
crates/apub/assets/akkoma/objects/: note.json
crates/apub/assets/gotosocial/actors/: kwa_hyp3r.link.json
crates/apub/assets/gotosocial/objects/: note.json  note_without_tag.json
crates/apub/assets/mastodon/activities/: create_note.json  follow.json  like_page.json  undo_follow.json  undo_like_page.json
crates/apub/src/: lib.rs
crates/apub/src/activities/: activity_lists.rs  db_activity.rs  db_activity_impl.rs  mod.rs
crates/apub/src/activities/create/: mod.rs  note.rs
crates/apub/src/activities/create_or_update/: mod.rs  note.rs
crates/apub/src/activities/following/: accept_follow.rs  db_received_follow.rs  db_received_follow_impl.rs  follow.rs  mod.rs  undo_follow.rs
crates/apub/src/activities/like/: db_received_like_impl.rs  like.rs  mod.rs  undo_like.rs
crates/apub/src/activities/like_or_announce/: db_received_announce.rs  db_received_announce_impl.rs  db_received_like.rs  db_received_like_impl.rs  like_or_announce.rs  mod.rs  undo_like_or_announce.rs
crates/apub/src/actors/: db_user.rs  db_user_feed_item.rs  db_user_feed_item_impl.rs  db_user_impl.rs  mod.rs  service.rs  service_db.rs  user.rs  user_attachment.rs  user_image.rs
crates/apub/src/collections/: collection.rs  collection_page.rs  mod.rs
crates/apub/src/links/: emoji.rs  hashtag.rs  mention.rs  mod.rs
crates/apub/src/objects/: db_post.rs  mod.rs  note.rs
crates/apub/src/utils/: generate_map.rs  mod.rs  verify_blocked.rs
crates/apub/tests/: activities.rs  actors.rs  collections_local.rs  note.rs  objects.rs
crates/backend/: Cargo.toml
crates/backend/src/: favicon.rs  lib.rs  openapi.rs  routes.rs
crates/cron/: Cargo.toml  README.md
crates/cron/src/: lib.rs
crates/cron/src/jobs/: mod.rs
crates/cron/src/jobs/update/: full.rs  mod.rs  partial.rs
crates/cron/src/tasks/: check_feed_item.rs  mod.rs  update.rs
crates/db_migration/: Cargo.toml  README.md
crates/db_migration/src/: lib.rs  m20220101_000001_user.rs  m20230808_000001_activity.rs  m20230822_000001_post.rs  m20230831_000001_user_feed_item.rs  m20230902_000001_received_follow.rs  m20240131_000001_user.rs  m20240131_000002_user_feed_item.rs  m20240131_000003_post.rs  m20240131_000004_activity.rs  m20240131_000005_received_follow.rs  m20240501_000001_received_like.rs  m20240501_000002_received_announce.rs  m20240515_000001_user_feed_hatsu_extension.rs  m20240515_000002_user_feed.rs  m20240922_000001_blocked_instance.rs  m20240922_000002_blocked_actor.rs  m20240926_000001_blocked_url.rs  m20241028_000001_user_language.rs  main.rs
crates/db_schema/: Cargo.toml  README.md
crates/db_schema/src/: activity.rs  blocked_actor.rs  blocked_instance.rs  blocked_url.rs  lib.rs  post.rs  prelude.rs  received_announce.rs  received_follow.rs  received_like.rs  user.rs  user_feed_item.rs
crates/frontend/: Cargo.toml
crates/frontend/assets/: custom.css  dark.css  light.css  typescale.css
crates/frontend/src/: lib.rs
crates/frontend/src/pages/: home.rs  mod.rs
crates/frontend/src/partials/: layout.rs  mod.rs
crates/nodeinfo/: Cargo.toml
crates/nodeinfo/src/: handler.rs  lib.rs  nodeinfo.rs  routes.rs  schema.rs
crates/openapi/: Cargo.toml
crates/openapi/src/: apidoc.rs  lib.rs
crates/scheduler/: Cargo.toml  README.md
crates/scheduler/src/: lib.rs
crates/scheduler/src/update/: check_feed_item.rs  feed.rs  job.rs  mod.rs
crates/tracing/: Cargo.toml
crates/tracing/src/: lib.rs
crates/utils/: Cargo.toml
crates/utils/src/: codename.rs  data.rs  error.rs  graceful_shutdown.rs  lib.rs  markdown.rs  version.rs
crates/utils/src/date/: mod.rs
crates/utils/src/url/: mod.rs
crates/utils/src/user/: feed.rs
crates/well_known/: Cargo.toml
crates/well_known/src/: host_meta.rs  lib.rs  nodeinfo.rs
crates/well_known/src/entities/: host_meta.rs  mod.rs  nodeinfo.rs  webfinger.rs
crates/well_known/src/routes/: host_meta.rs  mod.rs  nodeinfo.rs  webfinger.rs
developers/: 01-prepare.html  02-local-development.html  03-docker-development.html  development-docker.html  development-local.html  prepare.html
docs/: README.md  book.toml
entity/: Cargo.toml
migration/: Cargo.toml
others/: 00-compatibility-chart.html  compatibility-chart.html  federation.html  json-feed-extension.html  packaging-status.html
src/: error.rs  main.rs  run.rs  scheduler.rs  web_server.rs
users/: backfeed.html  (+11 more)
(+185 files in other folders)
