[package]
name = "hatsu_api_apub"
version.workspace = true
edition.workspace = true
publish.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "hatsu_api_apub"
path = "src/lib.rs"

[dependencies]
hatsu_apub = { workspace = true }
hatsu_db_schema = { workspace = true }
hatsu_utils = { workspace = true }
activitypub_federation = { workspace = true }
axum = { workspace = true }
base64-simd = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
utoipa = { workspace = true }
