[package]
name = "hatsu_backend"
version.workspace = true
edition.workspace = true
publish.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "hatsu_backend"
path = "src/lib.rs"

[dependencies]
hatsu_api = { workspace = true }
hatsu_api_admin = { workspace = true }
hatsu_api_apub = { workspace = true }
hatsu_api_mastodon = { workspace = true }
hatsu_nodeinfo = { workspace = true }
hatsu_openapi = { workspace = true }
hatsu_well_known = { workspace = true }
hatsu_utils = { workspace = true }
activitypub_federation = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
tokio-graceful-shutdown = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
