[package]
name = "hatsu_cron"
version.workspace = true
edition.workspace = true
publish.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "hatsu_cron"
path = "src/lib.rs"

[dependencies]
hatsu_apub = { workspace = true }
hatsu_db_schema = { workspace = true }
hatsu_feed = { workspace = true }
hatsu_utils = { workspace = true }
activitypub_federation = { workspace = true }
anyhow = { workspace = true }
apalis = { workspace = true }
apalis-cron = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio-graceful-shutdown = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
