[package]
name = "hatsu_db_migration"
version.workspace = true
edition.workspace = true
publish.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "hatsu_db_migration"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
sea-orm-migration = { workspace = true }
