[package]
name = "hatsu_frontend"
version.workspace = true
edition.workspace = true
publish.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "hatsu_frontend"
path = "src/lib.rs"

[dependencies]
axum = { workspace = true }
hatsu_utils = { workspace = true }
maud = { workspace = true }
serde_json = { workspace = true }
