[package]
name = "hatsu_openapi"
version.workspace = true
edition.workspace = true
publish.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "hatsu_openapi"
path = "src/lib.rs"

[dependencies]
hatsu_api = { workspace = true }
hatsu_api_admin = { workspace = true }
hatsu_api_apub = { workspace = true }
hatsu_api_mastodon = { workspace = true }
hatsu_apub = { workspace = true }
hatsu_nodeinfo = { workspace = true }
hatsu_utils = { workspace = true }
hatsu_well_known = { workspace = true }
axum = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { version = "4", features = ["axum"] }
