[package]
name = "hatsu_openapi"
version.workspace = true
edition.workspace = true
publish.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "hatsu_openapi"
path = "src/lib.rs"

[dependencies]
hatsu_api_apub = { workspace = true }
hatsu_utils = { workspace = true }
utoipa = { workspace = true }
