[package]
name = "hatsu_scheduler"
version.workspace = true
edition.workspace = true
publish.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "hatsu_scheduler"
path = "src/lib.rs"

[dependencies]
hatsu_apub = { workspace = true }
hatsu_db_schema = { workspace = true }
hatsu_feed = { workspace = true }
hatsu_utils = { workspace = true }
activitypub_federation = { workspace = true }
async-trait = { workspace = true }
sea-orm = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio-cron-scheduler = { workspace = true }
tokio-graceful-shutdown = { workspace = true }
url = { workspace = true }
