[package]
name = "hatsu_tracing"
version.workspace = true
edition.workspace = true
publish.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "hatsu_tracing"
path = "src/lib.rs"

[features]
default = []
console = ["dep:console-subscriber"]
json = ["tracing-subscriber/json"]
# TODO: opentelemetry


[dependencies]
hatsu_utils = { workspace = true }
tracing = { workspace = true }
tracing-error = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# optional
console-subscriber = { version = "0.2", optional = true }
