[package]
name = "hatsu_well_known"
version.workspace = true
edition.workspace = true
publish.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "hatsu_well_known"
path = "src/lib.rs"

[dependencies]
hatsu_db_schema = { workspace = true }
hatsu_utils = { workspace = true }
activitypub_federation = { workspace = true }
axum = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
utoipa = { workspace = true }
